removed docker overrides